<resources>
    <string name="app_name">Udgam 2019</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Udgam 2019</string>
    <string name="nav_header_subtitle">udgam.nitsikkim.ac.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_udgam">About Udgam</string>
    <string name="sponsors">Sponsors</string>
    <string name="developers">Developers</string>
    <string name="log_out">Log-Out</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>
    <string name="guests">Guests</string>
    <string name="rate_app">Rate App</string>
    <string name="udgam_team">Udgam Team</string>
    <string name="application">Application</string>
    <string name="udgam">Udgam 2019</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="tug_of_war">Tug of War</string>
    <string name="face_painting">Face Painting</string>
    <string name="debate">Debate</string>
    <string name="quiz">Quiz</string>
    <string name="treasure_hunt">Treasure Hunt</string>
    <string name="h2hb2b">Heart To Heart And Brain To Brain</string>
    <string name="wall_painting">Wall Painting</string>
    <string name="balloon_fight">Balloon Fight</string>
    <string name="super_over">Super Over</string>
    <string name="arm_wrestling">Arm Wrestling</string>
    <string name="antakshri">Antakshari</string>
    <string name="just_a_minute">Just A Minute(JAM)</string>
    <string name="twist_a_tale">Twist A Tale</string>
    <string name="dance_face_off">Dance Face-Off</string>
    <string name="switching_emotion">Switching Emotion</string>
    <string name="connected">Connected</string>
    <string name="alfaaz">Alfaaz</string>
    <string name="dumsharaz">Dumb Charades</string>
    <string name="open_mic">Open Mic</string>
    <string name="high_voltage">High Voltage</string>
    <string name="pubg">PUBG</string>
    <string name="counter_strike">Counter Strike</string>
    <string name="camera_ne_bana_di_jodi">Camera Ne Bana Di Jodi</string>
    <string name="short_film_contest">Short Film Contest</string>
    <string name="ramp_walk">Ramp Walk</string>
    <string name="nit_idol">NIT Idol</string>
    <string name="tiger_five">Tiger Five</string>
    <string name="title_activity_event_description">EventDescriptionActivity</string>
    <string name="rules">Rules and Regulations</string>
    <string name="quiz_name1">Abhishek Kumar</string>
    <string name="quiz_name1_email">b170114@nitsikkim.ac.in</string>
    <string name="quiz_name1_phone">+91-9939532732</string>
    <string name="quiz_name2">Pawan Kumar</string>
    <string name="quiz_name2_email">b170151@nitsikkim.ac.in</string>
    <string name="quiz_name2_phone">+91-9494802251</string>
    <string name="quiz_time">To be decided later</string>
    <string name="quiz_place">To be decided later</string>
    <string name="quiz_description">1. The quiz will have two rounds, Screening Round and Stage Rounds.

\n\n2. Only team entries are eligible and a team shall consist of 2 members.

\n\n3. A screening round will be conducted to shortlist minimum 6 teams from the pool of registered teams, for the stage rounds.

\n\n4. The decision of the quiz organizing committee will be final and will not be subjected to any change in case.

\n\n5. The use of mobile or any other information retrieval system is strictly system is strictly prohibited.

\n\n6. Replacement of any team member is not allowed after registration.

\n\n7. The rules of the stage rounds will be disclosed later.
</string>
    <string name="debate_name1">Alok Kumar Tripathi</string>
    <string name="debate_name1_email">b170081@nitsikkim.ac.in</string>
    <string name="debate_name1_phone">+91-9680053598</string>
    <string name="debate_name2">Tanushree</string>
    <string name="debate_name2_email">b170073@nitsikkim.ac.in</string>
    <string name="debate_name2_phone">+91-9424064098</string>
    <string name="debate_time">To be decided later</string>
    <string name="debate_place">To be decided later</string>
    <string name="debate_description">A debate, where every opinion will be given a stage and every belief will be established. Prove your take on the topic by using witty remarks and slaying each others opinion.

\n\nRULES:\n\n1. Each team shall consist of two members.
\n\n2. The competition will consist of several levels and each level will have different segments.
\n\n3. In the first segment each team will be given a time of 3 minutes in which the team will present and elaborate their points.
\n\n4. The team supposed to speak in motion will be the one to introduce the topic and elaborate their views as to why they are favouring the motion.
\n\n5. The team opposing the motion will be the next to speak for three minutes.
\n\n6. Next segment will be of 5 minutes of affirmations and rebuttals between the favoring and opposing teams.
\n\n7. In the end the jury and audience will be asking questions to the debaters.
\n\n8. Topics will be given a day before the event, but favor or motion will be decided on the spot by lottery system.
\n\nJudging Criteria
    \n\nLanguage proficiency
\n\nContent relevance
\n\nBody language
\n\nFluency
\n\nAnswers given in questioning segment</string>
    <string name="tug_of_war_name1">Kabita Chhetri</string>
    <string name="tug_of_war_name1_email">b170017@nitsikkim.ac.in</string>
    <string name="tug_of_war_name1_phone">+91-7551012390</string>
    <string name="tug_of_war_name2">Sandeep Gupta</string>
    <string name="tug_of_war_name2_email">b170141@nitsikkim.ac.in</string>
    <string name="tug_of_war_name2_phone">+91-9838397181</string>
    <string name="tug_of_war_time">To be decided later</string>
    <string name="tug_of_war_place">NIT Sikkim Ground</string>
    <string name="tug_of_war_description">STRENGTH? REALLY?
\n\nA contest in which two teams pull at opposite end of rope until one drags the other over the central line.
        \n\n1. Each team consists of 8 members and 2 substitutes.
\n\n2. The rope must be pulled underarm and nobody’s elbow must go below the knee otherwise a foul will be called.
        \n\n3. No knots or loops shall be made in the rope, nor shall it be locked                across any part of the body of any member of the team.
     \n\n4. In case any team found breaking the rules would be disqualified.
 \n\n5. Both teams pull the rope, the winner being the team who manage   to pull the mark on the rope closest to their opponents over the center line.
\n\n6. Matches are often a best of 3 pull, the winner winning 2 out of the 3 pulls.
\n\n7. Tournament will be conducted on knock-out basis.
    \n\n*NOTE
    \n\nIn case of any argument, committee decision would be considered as final decision.</string>
    <string name="face_painting_name1">Sameer Choubey</string>
    <string name="face_painting_name1_email">b170095@nitsikkim.ac.in</string>
    <string name="face_painting_name1_phone">+91-9983522351</string>
    <string name="face_painting_name2">Priya Kumari Prasad</string>
    <string name="face_painting_name2_email">b170122@nitsikkim.ac.in</string>
    <string name="face_painting_name2_phone">+91-9832470123</string>
    <string name="face_painting_time">To be decided later</string>
    <string name="face_painting_place">To be decided later</string>
    <string name="face_painting_description">Get some new shades up your face. Trust the man with the brush in hand and wait for colours to create magic.
        \n\n1. A team should be composed of 2 members.
\n\n2. Colours, brushes etc will be provided organizers.
\n\n3. Time limit is 150 minutes.
\n\n4. Participants must come up with a good theme.
\n\n5. Decision of the judges will be final and binding.</string>
    <string name="treasure_hunt_name1">Ankita Singh</string>
    <string name="treasure_hunt_name1_email">b170030@nitsikkim.ac.in</string>
    <string name="treasure_hunt_name1_phone">+91-9934944900</string>
    <string name="treasure_hunt_name2">Nishi Kumari</string>
    <string name="treasure_hunt_name2_email">b170105@nitsikkim.ac.in</string>
    <string name="treasure_hunt_name2_phone">+91-9614811076</string>
    <string name="treasure_hunt_time">To be decided later</string>
    <string name="treasure_hunt_place">To be decided later</string>
    <string name="treasure_hunt_description">A clue will be provided to each team, following that clue remaining clues need to be found out.
        \n\n1. Each team consists of 4 and not more than 7 members.
\n\n2. There are total 4 clues and the final destination (treasure) will be same for all the teams.
\n\n3. Time provided for finding all clue is one hour.
\n\n4. There will be 2 rounds. After 1st round top 8 teams will be selected.
 \n\n5. Selection will be based on time taken and if all clues are found in sequence and at right place.
\n\n6. Maximum 32 teams can participate and participation will be based on First come First serve basis.
\n\n7. If any team is found picking the clues of other team, that team will be eliminated.
\n\n8. In case of argument, committee decision will be final.
    </string>
    <string name="h2hb2b_name1">Tanushree</string>
    <string name="h2hb2b_name1_email">b170073@nitsikkim.ac.in</string>
    <string name="h2hb2b_name1_phone">+91-9931905946</string>
    <string name="h2hb2b_name2">Priya Kumari Prasad</string>
    <string name="h2hb2b_name2_email">b170122@nitsikkim.ac.in</string>
    <string name="h2hb2b_name2_phone">+91-9832470123</string>
    <string name="h2hb2b_time">To be decided later</string>
    <string name="h2hb2b_place">To be decided later</string>
    <string name="h2hb2b_description">Do you think you have a strong bond with your friend? Let\’s put this bond to test and explore how much you know about each other through some super exciting questions. And guess what? You’ll know towards the end of road how firm your connections are.

\n\nRULES:
\n\n1. This event will be conducted in 2 separate rooms.
\n\n2. Team of 2 people would be requested to participate.
\n\n3. Participants in this event will be seated in different rooms and will be needed to answer same questions about themselves and other person.
\n\n4. Team with maximum no. of same answers will win.
    </string>
    <string name="wall_painting_name1">Kabita Chhetri</string>
    <string name="wall_painting_name1_email">b170017@nitsikkim.ac.in</string>
    <string name="wall_painting_name1_phone">+91-7551012390</string>
    <string name="wall_painting_name2">Rajani Kumari</string>
    <string name="wall_painting_name2_email">b170132@nitsikkim.ac.in</string>
    <string name="wall_painting_name2_phone">+91-9564498405</string>
    <string name="wall_painting_time">To be decided later</string>
    <string name="wall_painting_place">To be decided later</string>
    <string name="share_app">Share App</string>
    <string name="report_bug">Report Bug</string>
</resources>