<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_nav_events"
        android:icon="@drawable/event_24"
        android:title="@string/events"/>
    <item
        android:id="@+id/bottom_nav_gallery"
        android:icon="@drawable/gallery"
        android:title="@string/gallery"/>
    <item
        android:id="@+id/bottom_nav_guests"
        android:icon="@drawable/people_24"
        android:title="@string/guests"/>
    <item
        android:id="@+id/bottom_nav_notification"
        android:icon="@drawable/notification_important_24"
        android:title="Notices"/>

</menu>